--- a/assets/css/shop.style.css
+++ b/assets/css/shop.style.css
@@ -62,6 +62,7 @@ li:first-child {
 ------------------------------------*/
 .wrapper {
   background: #fff;
+  overflow-x: hidden;
 }
 
 .boxed-layout {
@@ -2609,7 +2610,7 @@ li:first-child {
   height: 100%;
   content: " ";
   position: absolute;
-  background: rgba(0,0,0,0.3);
+  background: rgba(0, 0, 0, 0.1);
 }
 
 .breadcrumbs-v4 .container {
