--- a/assets/css/headers/header-v5.css
+++ b/assets/css/headers/header-v5.css
@@ -362,10 +362,11 @@
       margin-right: 50px;
     }
     .header-v5 .shop-badge {
-    	position: absolute;
-    	top: 0;
-    	right: 20px;
-    	padding: 14px 10px 18px 0;
+        position: absolute;
+        top: 0;
+        right: 20px;
+        padding: 14px 10px 18px 0;
+        width: 50px;
     }
     .header-v5 .shop-badge span.badge {
     	top: 5px;
