--- a/assets/plugins/revolution-slider/rs-plugin/css/settings.css
+++ b/assets/plugins/revolution-slider/rs-plugin/css/settings.css
@@ -2095,7 +2095,7 @@ img.tp-slider-alternative-image	{	width:100%; height:auto;}
 												background: rgba(255, 255, 255, 1) !important;
 												width: 6px !important;
 											    height: 6px !important;
-											    border: 5px solid rgba(0, 0, 0, 1) !important;
+											    border: 5px solid rgb(255, 102, 43) !important;
 }
 
 
