--- a/assets/plugins/master-slider/masterslider/style/masterslider.css
+++ b/assets/plugins/master-slider/masterslider/style/masterslider.css
@@ -107,12 +107,13 @@
 }
 
 .ms-slide .ms-slide-link {
-	display: block;
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top:0;
-	z-index: 110;
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    z-index: 110;
+    cursor: zoom-in;
 }
 
 .ms-ie .ms-slide-link {
